# lass

./: .gitignore  .gitmodules  README.md  batchwatch.sh  environment.yml  plotall.sh  pyproject.toml  watchlatest.sh
artifacts/csv-results/: accs_3.csv  ilr_deberta-nt-better-split-bs16*2-0sh-instance-split-07141059_task_perf.csv  scaling_joined.csv  shot_influence.csv  shot_influence_renamed.csv
artifacts/csv-results/population/: results-base-top4-128b-only-contamination.csv  results-base-top4-128b-only.csv  results-base-top4-all-models-contamination.csv
artifacts/csv-results/scaling/: 1b.csv  244m.csv  27b.csv  2b.csv  422m.csv  4b.csv  8b.csv
artifacts/csv-results/scaling-0sh/: 125m.csv  128b.csv  16m.csv  1b.csv  244m.csv  27b.csv  2b.csv  2m.csv  422m.csv  4b.csv  53m.csv  8b.csv
artifacts/csv-results/scaling-0sh-large/: 125m.csv  128b.csv  16m.csv  1b-faulty.csv  244m.csv  27b.csv  2b.csv  2m.csv  422m.csv  4b.csv  53m.csv  8b.csv
artifacts/csv-results/scaling-0sh-small/: 125m.csv  128b.csv  16m.csv  1b.csv  244m.csv  27b.csv  2b.csv  2m.csv  422m.csv  4b.csv  53m.csv  8b.csv
artifacts/csv-results/scaling-0sh-wandb-export/: scale-relation-base.csv  scale-relation-large.csv  scale-relation-small.csv
notebooks/: Analyse_InstSplit_Results.ipynb  Analyse_Likelihoods_Scaling2.ipynb  Analyse_TaskTypes.ipynb  Analyse_TaskTypes2.ipynb  BERT_for_single_tasksystem.ipynb  BigBench_Analysis.ipynb  EXP1_BERT_inst_split_single_syst.ipynb  EXP2_BERT_task_split_single_syst.ipynb  EXP_BERT_inst_split_single_syst.ipynb  EXP_BERT_task_split_single_syst.ipynb  Evaluate.ipynb  Exp_Assessor_Architecture.ipynb  Exp_Distribution_Shift.ipynb  Exp_Main_Analysis.ipynb  Exp_Population_Analysis.ipynb  Exp_Quantification.ipynb  Exp_Scaling.ipynb  Exp_Scaling_Analysis.ipynb  Exp_Shots_Analysis.ipynb  Exp_Task_Generalisation_Analysis.ipynb  Exp_Task_Specific_Assessors_Analysis.ipynb  Exp_Task_Specific_Finetuning.ipynb  Exp_Task_Specific_Finetuning_Analysis.ipynb  Exp_XAI.ipynb  Sanity_Check.ipynb  Scaling.ipynb  Scratchpad.ipynb  Scratchpad3.ipynb  Task_Specific_Assessors.ipynb  Untitled.ipynb  task-level-assessors.csv
notebooks/Exp_Analyse_Perfect/: Exp_Main_Analyse_Perfect_BBQ.ipynb  Exp_Main_Analyse_Perfect_Color.ipynb  Exp_Main_Analyse_Perfect_Epistemic.ipynb  Exp_Main_Analyse_Perfect_Hyperbaton.ipynb  Exp_Main_Analyse_Perfect_Metaphor.ipynb  Exp_Main_Analyse_Perfect_Multiemo.ipynb  Exp_Main_Analyse_Perfect_Navigate.ipynb  Exp_Main_Analyse_Perfect_Social.ipynb  Exp_Main_Analyse_Perfect_StrategyQA.ipynb  Exp_Main_Analyse_Perfect_Vitamin.ipynb  Exp_Main_Analyse_Perfect_WinoWhy.ipynb
notebooks/Exploration/: Analyse_Likelihoods_Scaling.ipynb  BigBench_Analysis.ipynb  Exp_Assessor_Architecture.ipynb  Exp_BERT_inst_split_single_syst.ipynb  Exp_BERT_task_split_single_syst.ipynb  Exp_Distribution_Shift.ipynb
notebooks/One-off/: Analyse_ContIssue.ipynb  CalculateAPICosts.ipynb  HFAutoTrain.ipynb  Multiple Choice.ipynb  Sanity_Check.ipynb  Truncation_Side.ipynb  Wandb Update.ipynb  automl_configs.tex
scripts/: decompress.sh
slurm/: q1indistribution.sh  q2outofdistribution.sh  q3correlation.sh  q4multitask.sh  q5population.sh  q6scaling.sh  q7shots.sh  reproduce_rev1_q1.sh  xtra_architecture_selection.sh  xtra_reproduce_rev1_q1.sh
src/lass/: __init__.py  config.py  datasets.py  log_handling.py  pipeline.py  setup.py  test.py  train.py  utils.py
src/lmasss/: log_handling.py
utils/: STATS.md  assumptions.py  count.py  decompress.sh  gputest.py  gputest_train.py  initial_task_split.txt  lm_scores.txt  model_sizes.py  run1.py  run2.py  scores.py  tasklist.txt  tasklist_comments.txt  tasklist_lite.txt  test1.py  to_csv.py  train1.py  train2.py
(+938 files in other folders)
