[tool.poetry]
name        = "lmasss"
version     = "0.1.0"
description = ""
authors     = ["Wout Schellaert <wout.schellaert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
# We removed all dependencies of bigbench. In general we only need 
# their utility classes and types, which are base python.
big-bench    = { path = "./bigbench", develop = true }
ipywidgets   = "^7.6.3"
ipykernel    = "^6.0.3"
jupyterlab   = "^3.1.1"
poethepoet   = "^0.10.0"
tqdm         = "^4.62.3"
pandas       = "^1.3.3"
scikit-learn = "^1.0.1"
matplotlib   = "^3.4.3"
datasets     = "^2.1.0"
transformers = "^4.18.0"
wandb = "^0.12.15"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
nbdime   = "^3.1.0"
mypy     = "^0.910"
pylint   = "^2.9.6"
autopep8 = "^1.5.7"
pytest   = "^6.2.5"

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
jpt  = { cmd = "jupyter lab --no-browser --port=8888" }
run  = { cmd = "python -m play" }
test = { cmd = "pytest --pyargs play" }
type = { cmd = "mypy play" }

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
